Deduplicate simulateLanding/RopeGrab estimate methods
estimateLandingTimeMs now delegates to simulateLanding (JumpLanding
already carries timeMs()). RopeGrab pair unified via simulateRopeGrabCore
returning a new RopeGrabResult record; both wrappers are 2-liners.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>